--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -17,7 +17,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
+<data>
+    <variable
+        name="gameViewModel"
+        type="com.example.android.guesstheword.screens.game.GameViewModel" />
+</data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/game_layout"
         android:layout_width="match_parent"
@@ -28,6 +32,7 @@
             android:id="@+id/word_is_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:layout_marginBottom="16dp"
             android:fontFamily="sans-serif"
             android:text="@string/word_is"
@@ -45,13 +50,15 @@
             android:id="@+id/word_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:animateLayoutChanges="true"
             android:fontFamily="sans-serif"
+            android:text="@{@string/quote_format(gameViewModel.word)}"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="@color/black_text_color"
-            android:textSize="34sp"
+            android:textSize="@dimen/jumbo"
             android:textStyle="normal"
-            app:layout_constraintBottom_toTopOf="@+id/score_text"
+            app:layout_constraintBottom_toTopOf="@+id/timer_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +74,9 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:fontFamily="sans-serif"
-            android:textColor="@color/grey_text_color"
-            android:textSize="14sp"
+            android:text="@{gameViewModel.remainingTimeString}"
+            android:textColor="@{gameViewModel.criticalPhase? @color/selected_red_color : @color/black_text_color}"
+            android:textSize="@dimen/normal"
             android:textStyle="normal"
             app:layout_constraintBottom_toTopOf="@+id/score_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,8 +90,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="sans-serif"
+            android:text="@{String.valueOf(gameViewModel.score)}"
             android:textColor="@color/grey_text_color"
-            android:textSize="14sp"
+            android:textSize="@dimen/normal"
             android:textStyle="normal"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
@@ -97,6 +106,7 @@
             android:layout_marginStart="16dp"
             android:text="@string/skip"
             android:theme="@style/SkipButton"
+            android:onClick="@{() -> gameViewModel.onSkip()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/correct_button"
             app:layout_constraintHorizontal_bias="0.5"
@@ -109,7 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_end="96dp" />
+            app:layout_constraintGuide_end="79dp" />
 
         <Button
             android:id="@+id/correct_button"
@@ -118,6 +128,7 @@
             android:layout_marginEnd="16dp"
             android:text="@string/got_it"
             android:theme="@style/GoButton"
+            android:onClick="@{() -> gameViewModel.onCorrect()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
